crates/lang/tests/ui/contract/fail/module-missing-constructor.stderr
error: missing ink! constructor
  --> tests/ui/contract/fail/module-missing-constructor.rs:4:1
   |
4  | / mod contract {
5  | |     #[ink(storage)]
6  | |     pub struct Contract {}
7  | |
...  |
11 | |     }
12 | | }
   | |_^
